[MOUNTMGR] Misc. fixes to QueryDeviceInformation: - Simplify failure path for DeviceName query failure - Don't make stable query failure fail the whole function call

Based on a patch by Vadim Galiant

CORE-15550